Fix native overlay scrollbars

--- a/src/styles/components/scrollbar/styles.less
+++ b/src/styles/components/scrollbar/styles.less
@@ -66,7 +66,9 @@
     position: relative;
 
     .gm-scroll-view {
+      height: 100%;
       position: absolute;
+      width: 100%;
 
       & > * {
         position: relative;
